2021-02-05 Fred Kiefer <FredKiefer@gmx.de>

	* Resources/Italian.lproj/Localizable.strings,
	* Resources/Esperanto.lproj/Localizable.strings: Readd BOM which
	was lost when regenerating these files.

2021-01-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-_numRows): Take column value binding into
	consideration.
	* Source/NSTableColumn.m (-setValue:forKey:): Reload table data.

2021-01-22 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSWindow.m (GSOrderedWindows): Don't try to handle
	already gone windows that may be returned from a slow window manager.

2021-01-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSHorizontalTypesetter.m: Small cleanups for nerged pull request.
	* Resources: Regenerate translation files.
	* Documentation/news.texi,
	* Version: Updating documentation for the upcoming 0.29.0 release.

2021-01-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSControl.m: Change encoding/decoding to protect
	against differences in integer size.

2021-01-08 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSComboBoxCell.h: Correct type of instance variables.
	* Source/GSGuiPrivate.h: Add macros for encoding/decoding.
	* Source/NSActionCell.m,
	* Source/NSButtonCell.m,
	* Source/NSCell.m,
	* Source/NSComboBoxCell.m,
	* Source/NSImageCell.m,
	* Source/NSLevelIndicatorCell.m,
	* Source/NSPathCell.m,
	* Source/NSPopUpButtonCell.m,
	* Source/NSSearchFieldCell.m,
	* Source/NSSliderCell.m,
	* Source/NSStepperCell.m: Change encoding/decoding to protect
	against differences in integer size.

2020-12-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSearchFieldCell.m: Use GSTheme to display the popup.

2020-12-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSearchField.m,
	* Source/NSSearchFieldCell.m: Small cleanups in formatting and
	int types.

2020-12-11 Riccardo Mottola <rm@gnu.org>

	* Source/GSToolbarView.m,
	Use centerScanRect to correct Items frame and avoid flickering.

2020-12-06 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSToolbarFrameworkPrivate.h,